test/should-fail/检查类型-7.j
function a takes nothing returns nothing
    local handle h = null
    if h then
    endif
endfunction
